Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -59,6 +59,7 @@ stages:
     pool: 
      vmimage: 'windows-latest'
     steps:
+    - checkout: none
 
     - download: current
       artifact: Templates
@@ -87,6 +88,7 @@ stages:
       runOnce:
         deploy:
           steps:
+          - checkout: none
 
           - download: current
             artifact: Website
