--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -108,16 +108,22 @@ stages:
     pool:
       vmImage: 'windows-latest'
     steps:
-      - task: PowerShell@2
-        inputs:
-          targetType: 'inline'
-          script: |
-            cd Application\aspnet-core-dotnet-core.FunctionalTests
-            [xml]$runSetting = Get-Content functionalTests.runsettings
-            $runSetting.RunSettings.TestRunParameters.ChildNodes.Item(0).value = 'https://$(AZURE_WEBAPP_NAME).azurewebsites.net/'
-            $runSetting.Save("$(pwd)/functionalTests.runsettings")
-      - task: DotNetCoreCLI@2
-        inputs:
-          command: 'test'
-          projects: '$(System.DefaultWorkingDirectory)/Application/aspnet-core-dotnet-core.FunctionalTests'
-          arguments: '-s functionalTests.runsettings'
+    - task: replacetokens@5
+      inputs:
+        targetFiles: '**/*.runsettings'
+        encoding: 'auto'
+        tokenPattern: 'rm'
+        writeBOM: true
+        actionOnMissing: 'warn'
+        keepToken: false
+        actionOnNoFiles: 'continue'
+        enableTransforms: false
+        enableRecursion: false
+        useLegacyPattern: false
+        enableTelemetry: true
+    
+    - task: DotNetCoreCLI@2
+      inputs:
+        command: 'test'
+        projects: '$(System.DefaultWorkingDirectory)/Application/aspnet-core-dotnet-core.FunctionalTests'
+        arguments: '-s $(System.DefaultWorkingDirectory)/Application/functionalTests.runsettings'
